# weekly_gainers

./: .gitignore  CLAUDE.md  DEVELOPMENT_STATUS.md  main.py  pyproject.toml  run_daily.bat
data/weekly_gainers/: event_manifest.json
data/weekly_gainers/2026/: weekly_gainers_2026_W17_04M4W_0420~0424.parquet
docs/: krx_index_components_api.md
src/application/services/: calendar_service.py  excel_report_builder.py  weekly_gainer_service.py
src/domain/: gainer_filter.py  models.py  ports.py  repositories.py
src/infra/adapters/: krx_adapter.py
src/infra/storage/: google_drive_adapter.py  google_drive_repository.py  parquet_repository.py
tests/integration/: __init__.py  legacy_test_parquet_repository.py  test_google_drive_repository.py  test_krx_adapter.py  test_parquet_repository.py  test_weekly_gainer_service_integration.py
tests/unit/: legacy_test_parquet_repository_extension.py  test_calendar_service.py  test_excel_report_builder.py  test_gainer_filter.py  test_google_drive_adapter_extension.py  test_google_drive_repository.py  test_parquet_repository.py  test_parquet_repository_extension.py  test_ports_decoupling.py
